# MyAi

./: .env.example  .gitignore  Dockerfile  README.md  RUN_MIAI.md  SETUP_GUIDE.md  WINDOWS_SETUP.md  cli_chat.py  docker-compose.yml  pyproject.toml  test_output.txt
app/: bot.py  config.py  main.py
app/agent/: __init__.py  core.py  prompts.py  tools.py
app/security/: __init__.py  permissions.py
app/services/: __init__.py  file_access.py  graph.py  meeting_transcript.py  ollama.py  rag.py  web_search.py
app/storage/: __init__.py  database.py  models.py
config/: config.yaml  permissions.yaml
scripts/: load_project_context.py  test_transcript_pipeline.py
teams-app/: manifest.json
tests/: test_basic.py
